--- a/thtyedi.html
+++ b/thtyedi.html
@@ -3,7 +3,7 @@
 
 
           <!-- PAGE TITLE -->
-          <title>HACKED BY | rootDex </title>
+          <title>HACKED BY |TURKHACKTEAM - ANKA RED TEAM</title>
 
 
 
@@ -20,7 +20,7 @@
 
 <center><img width="175" src="https://i.hizliresim.com/m9RCVr.png"></br></center>
 
-<br><font face="Changa"><font size="7"><font color="black">HACKED BY<font color="orange"> TURKHACKTEAM - ANKA RED TEAM
+<br><font face="Changa"><font size="7"><font color="black">HACKED BY<font color="orange"> rootDex
 <center><img width="500" src="https://i.hizliresim.com/q6iq2ex.jpg"></br></center>
 
 <br><font face="Changa"><font size="5"><font color="black"><i>VETERAN7 - GHOST KILLER - GITARISTAN
